[project]
name = "dmrec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
    "nbformat>=5.10.4",
    "numpy==1.24.3",
    "plotly>=6.5.1",
    "pyyaml<=6.0.2",
    "scikit-learn>=1.3.2",
    "scipy==1.10.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.2.1",
    "setuptools>=75.3.2",
    "torch==2.2.0",
    "tqdm>=4.67.1",
]
